Changed the fetchSize to take it from appstate and alignment issues are fixed

--- a/components/page-recon/page-recon.less
+++ b/components/page-recon/page-recon.less
@@ -98,7 +98,7 @@
 	}
 
 	.grid-custom-overflow{
-		background: #f4f4f4;
+		//background: #f4f4f4;
 		clear: both;
 		//height: 215px;
 		overflow-x: scroll;
@@ -107,6 +107,7 @@
 
 	#ingested {
 		width:100% !important;
+		padding: 0!important;
 		padding-left: 15px !important;
 		padding-right: 15px !important;
 		margin: 0px !important;
