--- a/components/recon-stats/recon-stats.less
+++ b/components/recon-stats/recon-stats.less
@@ -180,7 +180,7 @@ rn-grid-ingestionstats, #summaryStatsDiv, #summaryStatsTab{
 
 .spaceDiv1 {
   width:100%;
-  height:1%;
+  height:1px;
   border-bottom:  1px solid hsl(0, 0%, 75%) !important;
   display:block;
 }
